# advent-of-code-2024

./: Cargo.toml  readme.md  tarpaulin.toml
day00/: Cargo.toml
day00/resources/: problem.txt
day00/src/: lib.rs
day01/: Cargo.toml
day01/benches/: test_solve_day.rs
day01/src/: lib.rs
day02/benches/: test_solve_day.rs
day02/src/: lib.rs
main_project/: Cargo.toml
main_project/src/: main.rs
