[package]
name = "day01"
version = "0.1.0"
edition = "2021"
include = ["resources/problem.txt", "src/**"]

[dependencies]
regex = "1"
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
criterion-plot = "0.5"

[[bench]]
name = "test_solve_day"
harness = false
